argocd-example-apps/guestbook-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-ui
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec:
      containers:
        - name: guestbook-ui
          image: gcr.io/google-samples/gb-frontend:v5
          ports:
            - containerPort: 8080
              protocol: TCP
          command:
            - /bin/sh
            - -c
          args:
            - |
              sed -i 's/Listen 80/Listen 8080/' /etc/apache2/ports.conf
              exec apache2-foreground
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
